<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rootview"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_alpha_12"
    android:fitsSystemWindows="true">

    <ImageView
        android:id="@+id/splash_bg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/splash" />

    <TextView
        android:id="@+id/tv_slogan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/baby_slogan"
        android:textColor="@color/white_alpha_95"
        android:textSize="30sp" />

    <shem.com.materiallogin.MaterialLoginView
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        app:loginActionText="@string/go"
        app:loginHint="@string/loverusername"
        app:loginPasswordHint="@string/passwd"
        app:loginTextColor="@color/PrimaryTextColor"
        app:loginTitle="@string/login"
        app:registerActionText="@string/register"
        app:registerHint="@string/loverusername"
        app:registerPasswordHint="@string/passwd"
        app:registerRepeatPasswordHint="@string/repeatPasswd"
        app:registerTextColor="@color/PrimaryTextColor"
        app:registerTitle="@string/register" />


    <com.facebook.shimmer.ShimmerFrameLayout
        android:id="@+id/shimmer_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/activity_vertical_margin">

        <TextView
            android:id="@+id/tv_loginOrRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loginOrRegister"
            android:textColor="@color/white"
            android:textSize="25sp" />

    </com.facebook.shimmer.ShimmerFrameLayout>
</RelativeLayout>